--- a/istanbul.html
+++ b/istanbul.html
@@ -9,9 +9,26 @@
 </head>
 <body>
 
-    <nav class="navbar">
-        <a href="index.html" class="back-btn">← Back to Map</a>
-        <div class="logo">EuroGuide: Istanbul</div>
+        <nav class="navbar">
+        <a href="index.html" class="nav-logo">🌍 EuroGuide</a>
+
+        <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
+            
+            <li class="dropdown">
+                <a href="javascript:void(0)" class="dropbtn">Destinations ▾</a>
+                <div class="dropdown-content">
+                    <a href="istanbul.html">Istanbul</a>
+                    <a href="paris.html">Paris</a>
+                    <a href="rome.html">Rome</a>
+                    <a href="munich.html">Munich</a>
+                    <a href="amsterdam.html">Amsterdam</a>
+                    <a href="madrid.html">Madrid</a>
+                </div>
+            </li>
+
+            <li><a href="#budget">Plan Trip</a></li> <li><a href="#contact">Contact</a></li>
+        </ul>
     </nav>
 
     <header class="city-hero istanbul-hero">
